[package]
name = "mirrormagic"
version = "0.1.0"
edition = "2021"

description = "Mirror Magic tool to Magically make OpenSUSE Mirrors Magic-er"
# documentation = "..."
# homepage = "..."
repository = "https://github.com/Firstyear/mirrormagic"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros", "sync"] }
structopt = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rust-ini = "0.17.0"
url = { version = "2", features = ["serde"] }

surge-ping = "0.4"

