[package]
name = "mirrorsorcerer"
version = "0.1.0"
edition = "2021"

description = "Mirror Sorcerer tool to magically make OpenSUSE mirror sources more magic-er"
# documentation = "..."
# homepage = "..."
repository = "https://github.com/Firstyear/mirrorsorcerer"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros", "sync", "signal"] }
structopt = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rust-ini = "0.17.0"
url = { version = "2", features = ["serde"] }

surge-ping = "0.4"
users = "0.11"

notify = "4.0.17"

